--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -18,7 +18,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO (01) Add a GameViewModel variable to the layout -->
+    <!-- DONE (01) Add a GameViewModel variable to the layout -->
+ <data>
+     <variable
+         name="gameViewModel"
+         type="com.example.android.guesstheword.screens.game.GameViewModel" />
+ </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/game_layout"
@@ -92,7 +97,7 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Score: 2" />
 
-        <!-- TODO (02) Use the viewmodel variable to add onClick attributes for both buttons
+        <!-- DONE (02) Use the viewmodel variable to add onClick attributes for both buttons
         that call the associated methods in the GameViewModel -->
         <Button
             android:id="@+id/skip_button"
@@ -100,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/skip"
+            android:onClick="@{()->gameViewModel.onSkip()}"
             android:theme="@style/SkipButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/correct_button"
@@ -120,6 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:onClick="@{()->gameViewModel.onCorrect()}"
             android:text="@string/got_it"
             android:theme="@style/GoButton"
             app:layout_constraintBottom_toBottomOf="parent"
